# repl-interview

./: CMakeLists.txt  CMakePresets.json  README.md  SPECS.md
include/CommandInterpreter/: CommandExamples.h  Control.h  LibExport.h
install/CommandInterpreter/include/CommandInterpreter/: Control.h
sanity_tests/: Main.cpp
src/: CommandExamples.cpp  CommandInterpreter.h  CommandInterpreterImpl.cpp  CommandTypes.h  Control.cpp
src/include/CommandInterpreter/: CommandInterpreterImpl.h  CommandTypesHelper.h
src/interpreter/: CMakeLists.txt  CommandInterpreterImpl.cpp
src/interpreter/include/interpreter/: CommandInterpreterImpl.h  CommandTypesHelper.h  interpreter_export.h  public_api.h
src/repl/: CMakeLists.txt  repl.cpp
stream/: CMakeLists.txt  CMakePresets.json
stream/src/cmd_interpreter/: CMakeLists.txt  cmd_interpreter.cpp
stream/src/terminal_app/: CMakeLists.txt  terminal.cpp
stream/tests/: CMakeLists.txt  main.cpp
